# foldcast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-10-foldcast-implementation.md
docs/superpowers/specs/: 2026-04-10-foldcast-design.md
examples/: model_comparison.py  production_monitoring.py  quickstart.py
foldcast/: __init__.py  _types.py  _utils.py  backtest.py  compare.py  hierarchy.py  metrics.py  monitor.py  visualize.py
tests/: conftest.py  test_backtest.py  test_compare.py  test_hierarchy.py  test_init.py  test_integration.py  test_metrics.py  test_monitor.py  test_types.py  test_utils.py  test_visualize.py
