[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foldcast"
version = "0.1.0"
description = "Backtesting, comparison, and monitoring for production time series forecasts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Michael" }]
keywords = ["forecasting", "backtesting", "time-series", "monitoring", "model-comparison"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
parallel = ["joblib>=1.3"]
plotly = ["plotly>=5.15"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.5",
    "pandas-stubs",
]

[project.urls]
Homepage = "https://github.com/mackelday/foldcast"
Repository = "https://github.com/mackelday/foldcast"
Issues = "https://github.com/mackelday/foldcast/issues"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
